# ESP32C3_Clay_Zig

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
components/clayZigESP32/: CMakeLists.txt  build.zig  build.zig.zon
components/clayZigESP32/src/: clay_layout.zig  main_layout_test.zig  raylib_render_clay.zig  root.zig
components/clayZigESP32/src/clayZigESP32_build-stamp/: clayZigESP32_build-source_dirinfo.txt
components/clayZigESP32/tmp/: clayZigESP32_build-mkdirs.cmake
main/: CMakeLists.txt  Kconfig.projbuild  c_main.h  spi_master_example_main.c
